--- a/nginx/site/config.json
+++ b/nginx/site/config.json
@@ -2,40 +2,40 @@
     {
         "id": "player1",
         "title": "Prvni kamera",
-        "source": "http://147.229.147.107/hls/cam1.m3u8",
-        "source144": "http://147.229.147.107/hls/cam1_144.m3u8",
-        "source360": "http://147.229.147.107/hls/cam1_360.m3u8",
-        "source480": "http://147.229.147.107/hls/cam1_480.m3u8", 
+        "source": "/hls/stream_CAM1_src.m3u8",
+        "source144": "/hls/stream_CAM1_low.m3u8",
+        "source360": "/hls/stream_CAM1_mid.m3u8",
+        "source480": "/hls/stream_CAM1_high.m3u8", 
         "poster": "img/jedna.png",
         "info": "Kamera1 ohnostroj"
     },
     {
         "id": "player2",
         "title": "Druha kamera",
-        "source": "http://147.229.147.107/hls/cam2.m3u8",
-        "source144": "http://147.229.147.107/hls/cam2_144.m3u8",
-        "source360": "http://147.229.147.107/hls/cam2_360.m3u8",
-        "source480": "http://147.229.147.107/hls/cam2_480.m3u8",
+        "source": "/hls/stream_CAM2_src.m3u8",
+        "source144": "/hls/stream_CAM2_low.m3u8",
+        "source360": "/hls/stream_CAM2_mid.m3u8",
+        "source480": "/hls/stream_CAM2_high.m3u8", 
         "poster": "img/dva.png",
         "info": "Kamera2 pivo"
     },
     {
         "id": "player3",
         "title": "Treti kamera",
-        "source": "http://147.229.147.107/hls/cam3.m3u8",
-        "source144": "http://147.229.147.107/hls/cam3_144.m3u8",
-        "source360": "http://147.229.147.107/hls/cam3_360.m3u8",
-        "source480": "http://147.229.147.107/hls/cam3_480.m3u8",
+        "source": "/hls/stream_CAM3_src.m3u8",
+        "source144": "/hls/stream_CAM3_low.m3u8",
+        "source360": "/hls/stream_CAM3_mid.m3u8",
+        "source480": "/hls/stream_CAM3_high.m3u8", 
         "poster": "img/tri.png",
         "info": "Kamera3 domy"
     },
     {
         "id": "player4",
         "title": "Ctvrta kamera",
-        "source": "http://147.229.147.107/hls/cam4.m3u8",
-        "source144": "http://147.229.147.107/hls/cam4_144.m3u8",
-        "source360": "http://147.229.147.107/hls/cam4_360.m3u8",
-        "source480": "http://147.229.147.107/hls/cam4_480.m3u8",
+        "source": "/hls/stream_CAM4_src.m3u8",
+        "source144": "/hls/stream_CAM4_low.m3u8",
+        "source360": "/hls/stream_CAM4_mid.m3u8",
+        "source480": "/hls/stream_CAM4_high.m3u8", 
         "poster": "img/ctyri.png",
         "info": "Kamera4 vodopad"
     }
