nginx config fix

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -79,10 +79,10 @@ rtmp {
 			hls_cleanup on;
 			hls_nested off;
 
-			hls_variant _360 BANDWIDTH=288000;	  # Low bitrate, 360p
-			hls_variant _480 BANDWIDTH=448000;	  # Medium bitrate 480p
-			hls_variant _720 BANDWIDTH=2048000;   # High bitrate 720p
-			hls_variant _1080 BANDWIDTH=4096000;  # Source bitrate, source resolution
+			hls_variant _low BANDWIDTH=288000;	  # Low bitrate, 360p
+			hls_variant _mid BANDWIDTH=448000;	  # Medium bitrate 480p
+			hls_variant _high BANDWIDTH=2048000;   # High bitrate 720p
+			hls_variant _src BANDWIDTH=4096000;  # Source bitrate, source resolution
 
             #deny play all;
         }
